--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,10 +44,7 @@ jobs:
 
             - name: Install dependencies
               # Add `--ignore-scripts` because leveldb-zlib's install script is broken, so it is ignored and then fixed with the next step before being run.
-              run: npm install --ignore-scripts
-
-            - name: Build leveldb-zlib binaries
-              run: npm run build-leveldb-zlib
+              run: npm install
 
             # - name: Make distributables
             #   run: npm run make -- --dry-run --arch="${{ matrix.arch }}"
