--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,12 +51,11 @@ jobs:
 
             # - name: Make distributables
             #   run: npm run make -- --dry-run --arch="${{ matrix.arch }}"
-            - name: Increase Node heap limit
-              run: echo "NODE_OPTIONS=--max-old-space-size=4096" >> $GITHUB_ENV
 
             - name: Publish to GitHub Releases
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  NODE_OPTIONS: --max-old-space-size=4096
               run: npm run publish -- --arch="${{ matrix.arch }}"
 
             - name: Debug 1
