--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
         "electron": "37.2.1",
         "eslint": "^8.57.1",
         "eslint-plugin-import": "^2.32.0",
-        "leveldb-zlib": "^1.2.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.2",
         "vite": "^5.0.0",
         "vite-plugin-commonjs-externals": "^0.1.1"
     },
     "dependencies": {
+        "@8crafter/leveldb-zlib": "^1.3.0",
         "@electron/remote": "^2.1.3",
         "@monaco-editor/react": "^4.7.0-rc.0",
         "@octokit/rest": "^22.0.0",
@@ -89,4 +89,3 @@
         "electron-installer-redhat": "^3.2.0"
     }
 }
-
