--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "package": "electron-forge package",
         "make": "electron-forge make",
         "publish": "electron-forge publish",
-        "lint": "eslint --ext .ts,.tsx .",
-        "build-leveldb-zlib": "node buildLevelDBZlib.mts"
+        "lint": "eslint --ext .ts,.tsx ."
     },
     "keywords": [],
     "author": {
