--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "bedrock-world-editor",
     "productName": "bedrock-world-editor",
-    "version": "1.0.0-beta.2",
+    "version": "1.0.0-beta.3",
     "description": "An NBT editor for Minecraft Bedrock Edition.",
     "main": ".vite/build/main.js",
     "type": "commonjs",
@@ -10,7 +10,8 @@
         "package": "electron-forge package",
         "make": "electron-forge make",
         "publish": "electron-forge publish",
-        "lint": "eslint --ext .ts,.tsx ."
+        "lint": "eslint --ext .ts,.tsx .",
+        "install": "cd node_modules/@8crafter/leveldb-zlib && npm run install"
     },
     "keywords": [],
     "author": {
@@ -54,7 +55,7 @@
         "vite-plugin-commonjs-externals": "^0.1.1"
     },
     "dependencies": {
-        "@8crafter/leveldb-zlib": "^1.3.0",
+        "@8crafter/leveldb-zlib": "^1.6.0",
         "@electron/remote": "^2.1.3",
         "@monaco-editor/react": "^4.7.0-rc.0",
         "@octokit/rest": "^22.0.0",
@@ -70,7 +71,7 @@
         "jquery": "^3.7.1",
         "jquery-ui": "^1.14.1",
         "json5": "^2.2.3",
-        "mcbe-leveldb": "^1.1.0",
+        "mcbe-leveldb": "^1.2.2",
         "merge-refs": "^2.0.0",
         "mime-types": "^3.0.1",
         "monaco-editor": "^0.53.0",
