--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,8 @@
         "no-debugger": "off",
         "no-compare-neg-zero": "warn",
         // Unnecessary as it is built in to TypeScript.
-        "no-fallthrough": "off"
+        "no-fallthrough": "off",
+        "no-control-regex": "off"
     }
 }
 
